Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  For information on future releases, see ROADMAP.txt.

  After Zope 3.2.1

    Bug fixes

      - Fix invariant error handling in formlib. The exception Invalid raised
        in interface invariants where end in a component lookup error because
        this exception didn't get converted to a usefull error message.
        Now the error_views method in formlib can handle strings and i18n 
        Message based Invalid exceptions.

      - Fixed issue 691: make formlib javascript to display help texts more
        robust. It can now also display the helptext correctly if a complex
        widget with multiple fields and/or fields with the widget name used as
        a prefix for the form elements is shown.

      - Fixed issue 690: removed a javascript call from formlib/pageform.pt
        which depended on a non-existent function. It was a holdover from when
        the library was an external project.

      - Fixed issue 599: Provided a view for interface.exceptions.Invalid to
        allow formlib to display errors when validating invariants.

      - Fix get_rendered in zope.formlib. Make use of get_rendered in 
        setUpInputWidget which is used in AddFormBase.

      - Fixed error handling in sequence item input widget. This widget
        was raising a ValidationError instead a WidgetInputError. The formlib
        didn't catch ValidationErrors. Added also ValidationError handling to
        the formlib as a fallback for broken widget implementations.

      - Fixed issue 696: No display widget was registered for ISet fields with
        a IChoice(IBaseVocabulary) value type.

      - Fixed issue 551: Sequence widget ignored default values.

      - Fixed issue 592: Made handling of '(no value)' entries for selection
        widgets cleaner and consistent
