@@ -134,6 +134,8 @@ def getImageInfo(data):
         jpeg.read(2)
         b = jpeg.read(1)
         try:
+            w = -1
+            h = -1
             while (b and ord(b) != 0xDA):
                 while (ord(b) != 0xFF): b = jpeg.read(1)
                 while (ord(b) == 0xFF): b = jpeg.read(1)
